<resources>
    <string name="app_name">project</string>
    <string name="title">WORDLE</string>
    <string name="start_button">START</string>
    <string name="lose_text">OUT OF GUESSES!</string>
    <string name="win_text">YOU WIN!</string>
    <string name="return_button">Return to Start Screen</string>
    <string name="streak">Win Streak:  </string>
    <string name="input_hint">Input</string>
    <string name="instruction">Enter a Five Letter Word:</string>
    <string name="guess_button">Guess</string>
    <string name="error_message">Invalid Input</string>
    <string name="loseDisplayWord">The correct word was: </string>
</resources>